Modify readme for sit-wt-app